data/derived/comb/progs/unify/prog0669.ml.out
Characters 30-59:
  "[" ^ (List.map (sepConcat "; ") l) ^ "]";;
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type string
